--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">HIGH DESIGN WASHBASIN WORKS</div>
-        <img src="IMG20210810200524.jpg" alt="wash basin works" style="width:100%" height="700">
+        <img src="Parthiban.web/IMG20210810200524.jpg" alt="wash basin works" style="width:100%" height="700">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
