--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <img class="w3-image" src="IMG_20210405_180940.jpg" alt="Architecture" width="1500" height="10">
+  <img class="w3-image" src="Parthiban.web/IMG_20210405_180940.jpg" alt="Architecture" width="1500" height="10">
   <div class="w3-display-middle w3-margin-top w3-center">
     <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>PARTHIBAN</b></span> <span class="w3-hide-small w3-text-light-grey">PLUMBINGS</span></h1>
   </div>
@@ -45,19 +45,19 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">SHOWER & DIVERTERS WORKS</div>
-        <img src="IMG20201111153203.jpg" alt="works" style="width:100%" height="700">
+        <img src="Parthiban.web/IMG20201111153203.jpg" alt="works" style="width:100%" height="700">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">MASSAGER & SHOWER WORKS</div>
-        <img src="IMG20210327180509.jpg" alt="House" style="width:100%" height="700">
+        <img src="Parthiban.web/IMG20210327180509.jpg" alt="House" style="width:100%" height="700">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">PRESSURE PUMP WORKS</div>
-        <img src="IMG20210301174224.jpg" alt="House" style="width:100%" height="700">
+        <img src="Parthiban.web/IMG20210301174224.jpg" alt="House" style="width:100%" height="700">
       </div>
     </div>
   </div>
@@ -66,25 +66,25 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">APARTMENT METER SPLITER WORKS</div>
-        <img src="IMG_20210829_193517.jpg" alt="House" style="width:99%" height="700">
+        <img src="Parthiban.web/IMG_20210829_193517.jpg" alt="House" style="width:99%" height="700">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">MASSAGER PIPE WORKS</div>
-        <img src="IMG_20210829_194149.jpg" alt="House" style="width:99%" height="700">
+        <img src="Parthiban.web/IMG_20210829_194149.jpg" alt="House" style="width:99%" height="700">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">CONSENTIVE TANKS</div>
-        <img src="FB_IMG_1576042070973.jpg" alt="House" style="width:99%" height="700">
+        <img src="Parthiban.web/FB_IMG_1576042070973.jpg" alt="House" style="width:99%" height="700">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">SWIMMING POOL WORKS</div>
-        <img src="IMG20180802162021_1.jpg" alt="House" style="width:99%" height="700">
+        <img src="Parthiban.web/IMG20180802162021_1.jpg" alt="House" style="width:99%" height="700">
       </div>
     </div>
   </div>
@@ -98,7 +98,7 @@
 
   <div class="w3-row-padding w3-grayscale">
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="IMG_20210829_201501.jpg" alt="Parthiban" style="width:100%">
+      <img src="Parthiban.web/IMG_20210829_201501.jpg" alt="Parthiban" style="width:100%">
       <h3>Parthiban K</h3>
       <p class="w3-opacity">Founder</p>
       <p>We are currently providing quality plumbing services in PONDICHERRY & TAMILNADU .Feel free to ping us!!.</p>
@@ -109,7 +109,7 @@
   
 <!-- Image of location/map -->
 <div class="w3-container">
-  <img src="IMG20180922184717.jpg" class="w3-image" style="width:100%">
+  <img src="Parthiban.web/IMG20180922184717.jpg" class="w3-image" style="width:100%">
 </div>
 
 <!-- End page content -->
